:tada: Finish line : Rendering of the project
